# ACS

./: CMakeLists.txt  README.md  container.cpp  container.h  fractional.cpp  fractional.h  number.cpp  number.h  polar_coordinates.h  rnd.h
hw 3/: complex.py  container.py  fractional.py  main.py  number.py  polar_coordinates.py
hw 3/tests/: input5  output1  output1_1
hw1/src/: complex.cpp  complex.h  container.cpp  container.h  fractional.cpp  fractional.h  main.cpp  number.cpp  number.h  polar_coordinates.cpp  polar_coordinates.h
hw1/tests/: input3.TXT  out4_1.txt
hw_2/: CMakeLists.txt  complex.cpp  complex.h  container.cpp  container.h  fractional.cpp  fractional.h  main.cpp  number.cpp  number.h  polar.cpp  polar.h  rnd.h
hw_2/tests/: input1  input2  input3  input4  out2.txt
hw_5/: CMakeLists.txt  main.cpp
hw_5/tests/: input1  input4  input5
src/: complex.cpp  complex.h  polar_coordinates.cpp
tests/: input4.TXT  out4_2.txt  out5_1.txt
